--- a/build.gradle
+++ b/build.gradle
@@ -47,11 +47,11 @@ dependencies {
 	implementation 'mysql:mysql-connector-java:8.0.32'
 
 	// jjwt
-//	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
-//	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
-//	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
-	implementation 'io.jsonwebtoken:jjwt:0.9.1'
-	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
+//	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+//	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 
 	// JWE
 	implementation 'com.nimbusds:nimbus-jose-jwt:9.21.1'
