--- a/build.gradle
+++ b/build.gradle
@@ -50,15 +50,13 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
-//	implementation 'io.jsonwebtoken:jjwt:0.9.1'
-//	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 
 	// JWE
-	implementation 'com.nimbusds:nimbus-jose-jwt:9.21.1'
+//	implementation 'com.nimbusds:nimbus-jose-jwt:9.21.1'
 
 	// XML 문서와 Java 객체간 매핑 자동화
-	implementation 'javax.xml.bind:jaxb-api:2.3.1'
-	implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
+//	implementation 'javax.xml.bind:jaxb-api:2.3.1'
+//	implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
 
 	// oauth
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
